--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,36 @@
 {
-  "name": "predefined-variables",
-  "description": "predefined-variables php library",
-  "keywords": [],
+  "name": "g4/predefined-variables",
+  "description": "php predefined variables facade",
+  "keywords": [
+    "server",
+    "$_SERVER",
+    "predefined",
+    "variables",
+    "facade",
+    "globals",
+  ],
   "license": "MIT",
-  "authors": [],
+  "authors": [
+    {
+        "name": "Drasko Gomboc",
+        "email": "drasko.gomboc@gmail.com"
+    },
+    {
+        "name": "Dejan Samardzija",
+        "email": "samardzijadejan@gmail.com"
+    },
+    {
+        "name": "Ivan Krickovic",
+        "email": "ivan.krickovic@gmail.com"
+    }
+  ],
   "autoload": {
-    "psr-0": {"PredefinedVariables\\": "src/"}
+    "psr-4": {"G4\\PredefinedVariables\\": "src/"}
   },
   "require-dev": {
     "phpunit/phpunit": "3.7.*"
   },
   "require": {
+    "php": ">=5.4"
   }
 }
